Fix stale display work_area on windows

Display screen work_area was not being updated when the location of the taskbar
changed. The notification comes as WM_SETTINGCHANGE with SPI_SETWORKAREA, which
failed to trigger a reset of the stored values without this change.

BUG=712871

Review-Url: https://codereview.chromium.org/2829693003
Cr-Commit-Position: refs/heads/master@{#473055}

Former-commit-id: 1aa2783638e90007c9e1b0a67beafc2080780faa